--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ PORT = 4000
 EMAIL_USER = jellybeaninc24@gmail.com
 USER_PASS = qprl biny kpwe nlxh
 PLANT_ID_API_KEY=Lo6ksGb1YNd44gPBXpxO7MV6RdgdxBsowEhDaAgxOfp9NlAnSD
+WEATHER_API = b6d5e2cdc770992e78203fe5c6aa635b
