--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ EMAIL_USER = jellybeaninc24@gmail.com
 USER_PASS = qprl biny kpwe nlxh
 PLANT_ID_API_KEY=Lo6ksGb1YNd44gPBXpxO7MV6RdgdxBsowEhDaAgxOfp9NlAnSD
 WEATHER_API = b6d5e2cdc770992e78203fe5c6aa635b
+
+
+# CLOUDINARY
+CLOUDINARY_CLOUD_NAME=db1vjlfkm
+CLOUDINARY_API_KEY=459826983768286
+CLOUDINARY_API_SECRET=1_kjPza9RYjk2OeMTC33AakqTxA
