--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "natural": "^8.0.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
