--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "cloudinary": "^2.5.0",
+    "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-session": "^2.1.0",
@@ -24,6 +24,7 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
     "firebase": "^10.13.2",
+    "firebase-admin": "^12.5.0",
     "groq-sdk": "^0.5.0",
     "memorystore": "^1.6.7",
     "mongodb": "^6.7.0",
@@ -36,7 +37,7 @@
     "nodemailer-smtp-transport": "^2.7.4",
     "path": "^0.12.7",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.5",
+    "socket.io": "^4.8.0",
     "socket.io-client": "^4.7.5"
   }
 }
