--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ WEATHER_API = b6d5e2cdc770992e78203fe5c6aa635b
 CLOUDINARY_CLOUD_NAME=db1vjlfkm
 CLOUDINARY_API_KEY=459826983768286
 CLOUDINARY_API_SECRET=1_kjPza9RYjk2OeMTC33AakqTxA
+
+# PUSH NOTIFICATION
+VAPID_PUBLIC_KEY=BDA_foBLUFr0QjZZ8oZ8u6I1bFHsFuGRQUb786FZrz_SMGxXqitMkEAMQxX8RvCG0WyBnCDxp7wBW29L0z4-yYM
+VAPID_PRIVATE_KEY=b_EVgvy4M1Lk-a_Pi28wnqgwob1i2GwoVE98Mo-ley0
