--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "path": "^0.12.7",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.0",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "web-push": "^3.6.7"
   }
 }
