forum, change profile picture

--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
 MONGODB_URI = mongodb+srv://browwwnot:pVzcMvje9iYny52S@fooddb.lpiu0gx.mongodb.net/Jellybean?retryWrites=true&w=majority&appName=FoodDB
 GROQ_API_KEY=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
 PORT = 4000
-EMAIL_USER = jellybeaninc24@gmail.com
-USER_PASS = qprl biny kpwe nlxh
+# EMAIL_USER = jellybeaninc24@gmail.com
+# USER_PASS = qprl biny kpwe nlxh
+
+# for browwnot
+EMAIL_USER = browwwnot@gmail.com
+USER_PASS = yqfi qhfd oapg zavj
+
 PLANT_ID_API_KEY=Lo6ksGb1YNd44gPBXpxO7MV6RdgdxBsowEhDaAgxOfp9NlAnSD
 WEATHER_API = b6d5e2cdc770992e78203fe5c6aa635b
 
